@@ -2,18 +2,18 @@ Type: Package
 Package: lacunaritycovariance
 Title: Gliding Box Lacunarity and Other Metrics for 2D Random Closed
         Sets
-Version: 1.0-8
-Date: 2019-07-21
+Version: 1.0-13
+Date: 2020-01-31
 Author: Kassel Liam Hingee
-Maintainer: Kassel Liam Hingee <kassel.hingee@research.uwa.edu.au>
-Description: Functions for estimating the gliding box lacunarity (GBL),
-    covariance, and pair-correlation of a random closed set (RACS) in 2D
-    from a binary coverage map (e.g. presence-absence land cover maps).
-    Contains a number of newly-developed covariance-based estimators of
-    GBL (Hingee et al., 2019) <doi:10.1007/s13253-019-00351-9> and
-    balanced estimators, proposed by Picka (2000)
-    <http://www.jstor.org/stable/1428408>, for covariance, centred
-    covariance, and pair-correlation.  Also contains methods for
+Maintainer: Kassel Liam Hingee <kassel.hingee@gmail.com>
+Description: Functions for estimating the gliding box
+    lacunarity (GBL), covariance, and pair-correlation of a random closed
+    set (RACS) in 2D from a binary coverage map (e.g. presence-absence
+    land cover maps).  Contains a number of newly-developed
+    covariance-based estimators of GBL (Hingee et al., 2019)
+    <doi:10.1007/s13253-019-00351-9> and balanced estimators, proposed by
+    Picka (2000) <http://www.jstor.org/stable/1428408>, for covariance,
+    centred covariance, and pair-correlation.  Also contains methods for
     estimating contagion-like properties of RACS and simulating 2D Boolean
     models.  Binary coverage maps are usually represented as raster images
     with pixel values of TRUE, FALSE or NA, with NA representing
@@ -30,6 +30,6 @@ Suggests: raster, maptools, rgdal, testthat
 ByteCompile: true
 RoxygenNote: 6.1.1
 NeedsCompilation: no
-Packaged: 2019-07-21 05:54:56 UTC; tearcor
+Packaged: 2020-01-31 00:20:45 UTC; kassel
 Repository: CRAN
-Date/Publication: 2019-07-24 07:50:06 UTC
+Date/Publication: 2020-01-31 13:20:08 UTC
