@@ -1,16 +1,16 @@
-1fe5d6b9ad125d56948f52d5e3faa643 *DESCRIPTION
-fd08d2d8744d3bcdf7827c1959752d30 *NAMESPACE
-ac61626a3af9192d3ddd689cb06337aa *NEWS
+3214ea718478a28f85b6907b6e037ffb *DESCRIPTION
+1d59e04b9fff5153a3554b23deaab411 *NAMESPACE
+74deea0770f4fbb0d2f87719e88b6e10 *NEWS
 1dd28befbefce18693a6b44cd2791369 *R/ccvc.R
 4412a50625eb4cf4fc82d07118ad658d *R/contagdiscstate.R
 5eaec380e523c7b6fafa80513e2b25ae *R/contagpixelgrid.R
 26e81ca2ff207e0a33dbb9b3c4914b9d *R/coverageprob.R
 f82d322b0da1afaacbced8559d3c2b8d *R/cppicka.R
-94374590b56ee6220564e432176b3f6a *R/gbl.R
+d5ccbbf4053b64922c94e048b3d5a47d *R/gbl.R
 981d09a7a3cdd2336d073e21a2868c40 *R/gblc.R
 72ccaef09e9d1bf47d49b624741138a6 *R/gblcc.R
-0de269ba95c15594552ed5ed8c270c52 *R/gblemp.R
-821175d2bb9e8b021e0b35a94c893196 *R/gblg.R
+2d4ef4802597c22451543e0721b965ba *R/gblemp.R
+18390a8cc8eec770648fcb0204f1b6c5 *R/gblg.R
 3f1eb072f65139183cb1fd7cab4fe256 *R/innerprodim.R
 9c090e536a2be9f5e06ff4911d9b443c *R/isbinarymap.R
 6193952b7eaa144505468b88a1e1716d *R/pcln.R
@@ -21,17 +21,17 @@ e9b6703e4495160cea07bff63b82a1ab *R/racscovariance.R
 719e65c06818e2a564b0beefeae29f99 *R/rbdr.R
 c00e6406d93687eaac75bcc566bcc541 *R/rblnd.R
 21466c447fffcb2d251fc3fb29408ab6 *R/rbpto.R
-c4b8bf7a82a82f67267676f6600f4646 *R/secondorderprops.R
+c7a7271535efab2800306a0c570ff509 *R/secondorderprops.R
 ee8bae51f8de04f2b5ead8dafd83929c *R/summaryimlist.R
-a2afa2f749684b4436fab8ccd27d6242 *README.md
-87cfb94d3daaa537ea31cbae26370dba *build/partial.rdb
+43b31707ba4340ff41271caebb23ee5d *README.md
+66c6c8434ff58394b74212e370377501 *build/partial.rdb
 a0b63e7d143ffef86cacbe0b6606853c *build/vignette.rds
 2f25d9c7a61663c53d2edd7678ef1505 *demo/00Index
 b6d8c812749cd0e9448b2af89eeca416 *demo/import_remote_sense_data.R
 fb76c91171dbc83781a7afa9f097571f *inst/CITATION
 851a3f41a70c7430654da741aef1d6c7 *inst/doc/estimate_RACS_properties.R
 0ff6ba7a9122c3762ee0fe6a2f7108c1 *inst/doc/estimate_RACS_properties.Rnw
-f14b587e295331e0ae7c2e7f3b96d741 *inst/doc/estimate_RACS_properties.pdf
+0ff3a4ee1b4ec3cf6d2404ef5525ba2f *inst/doc/estimate_RACS_properties.pdf
 771792126e5e545ee50e7cd70339639f *inst/extdata/aregionofinterest.dbf
 cae8249a6907d06b218734c73a5d0ac7 *inst/extdata/aregionofinterest.prj
 6d9f3d24474e592dbc0439c629f42081 *inst/extdata/aregionofinterest.qpj
@@ -44,7 +44,7 @@ cae8249a6907d06b218734c73a5d0ac7 *inst/extdata/aregionofinterest.prj
 1a3e896aba41f022c169617458e27d38 *man/contagpixelgrid.Rd
 c82dde399506e57afacc2ee996de6108 *man/coverageprob.Rd
 2313b19a0f1b1bc2f270697932ea006c *man/cppicka.Rd
-202c380bf9fc3da32ca78c68b9015ff6 *man/gbl.Rd
+277c9733ad3b0202f5ec0b440fc06d4d *man/gbl.Rd
 90496ba55bea5deed1c43e8a2ea5ea5c *man/gblc.Rd
 3f141807bbe2c1425334593860437c7f *man/gblcc.Rd
 c37dd2ca185556aa2d3a411184928b6c *man/gblemp.Rd
@@ -66,13 +66,13 @@ f715cac501a5846248131a2891d85369 *man/plugincvc.Rd
 6f339abc52f046b7f7e2cc3b82f0d46a *tests/testthat/helper-calccovar.R
 5f34e1348db6e218bc653f6fd1c34cb3 *tests/testthat/test-contagdiscstate.R
 e6367670f33eb77b9076d077d501bb57 *tests/testthat/test-contagpixels.R
-ed04f8d9c9cf6522a159ba5f0b2cc19d *tests/testthat/test-covar.R
+78c011d466c3bd94dec6d5bd0dec57e0 *tests/testthat/test-covar.R
 50c4e34ea4d739b829e1dca7d1bcce51 *tests/testthat/test-cppicka.R
 cee59968df29736da00d67e7a41f04ac *tests/testthat/test-gbl.R
 380b73be2a09ea9c4881bf8b9cc3e720 *tests/testthat/test-imbinaryops.R
 59da960a8210957efb6e6a4159bb1da4 *tests/testthat/test-innerprod.R
 d1e7c2104bc09129fb3912eb4781cd9f *tests/testthat/test-rbdd.R
-1cded9dbbcf8ac4ee7b210104cee191d *tests/testthat/test-rbdr.R
+363be765c568eb00558f1f3aa3175715 *tests/testthat/test-rbdr.R
 520428e14372510a303e5378742bbd35 *tests/testthat/test-rblndr.R
 3260a855f6d2e4e2702814f6efc5b3fa *tests/testthat/test-rbpto.R
 5370c235af25580c8f3b676e81a536fb *tests/testthat/test-secondorderprops.R
