@@ -46,4 +46,3 @@ export(summary.imlist)
 import(spatstat)
 importFrom(stats,fft)
 importFrom(stats,rlnorm)
-importFrom(utils,installed.packages)
